--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -72,7 +72,7 @@ securit_header = Header
 securit_header_htaccess = Folgenden Code in der .htaccess ergänzen. Zusätzlich darauf achten, dass der Apacheserver selbst keinen dieser Header auch sendet. Der Eintrag sorgt dafür, dass ähnliche Header auch bei nicht REDAXO Dateien gesetzt werden.
 
 securit_be_log = Log
-securit_be_user_log = BE-User-Log
+securit_be_user_log = Security-Backend-User-Log
 securit_be_user_log_title = Log-Übersicht
 securit_be_user_log_warning_logisinactive = BE-User-Log ist inaktiv. Wir empfehlen es zu aktivieren. <a href="{0}">aktivieren</a>
 securit_be_user_log_warning_logisactive  = BE-User-Log ist aktiv. <a href="{0}">deaktivieren</a>
