--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -89,12 +89,10 @@ security_sts_fe_header_missing = `HTTP Strict-Transport-security` Header fehlt. 
 security_sts_fe_header_found = `HTTP Strict-Transport-security` Header gefunden. Mit folgenden Einstellungen: `{0}`
 security_rp_fe_header_missing = `Referrer-Policy` Header fehlt. Header muss im Apache/Nginx aktiviert werden.
 security_rp_fe_header_found = `Referrer-Policy` Header gefunden. Mit folgenden Einstellungen: `{0}`
-security_xss_fe_header_missing = `X-XSS-Protection` fehlt. Der Header ist deprecated und wird durch den CSP Header ersetzt (wenn vorhanden ;) )
-security_xss_fe_header_found = `X-XSS-Protection` ist vorhanden. Ist aber deprecated und der CSP Header ersetzt diesen (wenn vorhanden ;) )
+security_xss_fe_header_found = `X-XSS-Protection` ist vorhanden. Ist deprecated und sollte im CSP Header gesetzt werden
 security_cto_fe_header_missing = `X-Content-Type-Options` wurde nicht gefunden
 security_cto_fe_header_found = `X-Content-Type-Options` wurde gefunden. Mit folgenden Einstellungen: `{0}`
-security_fo_fe_header_missing = `X-Frame-Options` wurde nicht gefunden
-security_fo_fe_header_found = `X-Frame-Options` wurde gefunden. Mit folgenden Einstellungen: `{0}`
+security_fo_fe_header_found = `X-Frame-Options` wurde gefunden. Ist deprecated und sollte im CSP Header gesetzt werden
 security_csp_fe_header_found = `Content-Security-Policy` wurde gefunden.
 
 security_header_title_frontend = Aufruf einer statischen Datei `{0}`
@@ -112,4 +110,3 @@ security_error_notification_path_not_exists = Error LogPath does not exist `{0}`
 security_live_mode = Live-Modus
 security_live_mode_activate_info = Achtung! Hier kann man das live-mode aus dem Backend heraus aktivieren. Das führt dazu, dass ein Admin unmittelbar nicht mehr in der Lage ist, tiefere Eingriffe in REDAXO über das Backend durchzuführen. Das lässt sich nur über die core/config.yml wieder zurücksetzen.
 security_live_mode_activate = Aktiviere Live-Mode
-security_live_mode_activated = Live-Mode wurde aktiviert. Einige Seiten und Inhalte werden nun nicht mehr zugreifbar oder sichtbar sein.
